优化自动化模板

--- a/src/mdSample/html/index.html
+++ b/src/mdSample/html/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
       <div class="container" id="root">~~root~~</div>
+      ~~commonscript~~
       <div style="position: fixed;; bottom: 0; left: 0;">
         <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1257390996&web_id=1257390996"></script>
       <div>
