--- a/src/reactSample/js/index/index.html
+++ b/src/reactSample/js/index/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
       <div class="container" id="reactroot">~~root~~</div>
+      ~~commonscript~~
     </body>
   </html>
