完善文档系统，优化文档系统前端路由，支持嵌套路由

--- a/src/mdSample/js/micro/doc.html
+++ b/src/mdSample/js/micro/doc.html
@@ -9,5 +9,6 @@
   <body>
     <div class="container-vue" id="vueroot"></div>
     <div class="container" id="root">~~root~~</div>
+    ~~commonscript~~
   </body>
 </html>
